@@ -1,8 +1,8 @@
 #!/usr/bin/perl
 #
-# SNMPTTHANDLER v1.4beta2
+# SNMPTTHANDLER v1.4
 #
-# Copyright 2002-2007 Alex Burger
+# Copyright 2002-2013 Alex Burger
 # alex_b@users.sourceforge.net
 # 8/26/2002
 #
@@ -200,8 +200,8 @@ while (defined(my $line = <>))
 
 sub showversion
 {
-	printf "\nSNMPTTHANDLER v1.2\n";
-	printf "(c) 2002-2007 Alex Burger\n\n";
+	printf "\nSNMPTTHANDLER v1.4\n";
+	printf "(c) 2002-2013 Alex Burger\n\n";
 }
 
 ##############################################################################
