@@ -1,8 +1,8 @@
 #!/usr/bin/perl
 #
-# SNMPTTHANDLER-EMBEDDED v1.4beta1
+# SNMPTTHANDLER-EMBEDDED v1.4
 #
-# Copyright 2009-2012 Alex Burger
+# Copyright 2009-2013 Alex Burger
 # alex_b@users.sourceforge.net
 # 5/17/2009
 #
